--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -10,7 +10,6 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11786676.md#1">所属党立委选举失利 陈水扁：从此退出政坛</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>今日评论</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798679.md#1">王友群：2020中国会不会传染病大爆发</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798779.md#1">夏小强：国民党的迷途困境和未来出路</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798400.md#1">中华民国台湾 ：民主进程看过来</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797264.md#1">程晓容：美中签约 川普强调“要坚强”透深意</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797632.md#1">宋善：庆贺三亿五千万人退党</a><br>
@@ -22,6 +21,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796197.md#1">周晓辉：党章放床头可笑 中南海黔驴技穷</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796087.md#1">洪微：美军公开特战部署应对中共</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794220.md#1">袁斌：贫困女生与贪腐高官 朱门酒肉臭当代版</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794484.md#1">程晓容：中共最新反腐电视片说明什么？</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/news392.md#1">更多......</a></p><hr><h2><p><strong>独家视角</strong></p></h2>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/6/n11772884.md#1">【直播回放】蔡英文高票连任 名家点评胜选关键</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782674.md#1">美对伊朗祭新制裁 中国企业上榜被冻结资产</a><br>
@@ -35,13 +35,13 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798907.md#1">王赫：2019中共政局 赶制家法 内斗诡异</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798795.md#1">【直播中】美参院审理总统弹劾案</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798641.md#1">大陆用电减少 央企预测经济增速5年降至4%</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798666.md#1">武汉新型冠状病毒新增死亡病例 网友冒险爆料</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798666.md#1">武汉新冠状病毒再增死亡病例 网友冒险爆料</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798779.md#1">夏小强：国民党的迷途困境和未来出路</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795369.md#1">2019年 529人参与迫害法轮功遭厄运</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798118.md#1">上海两会 访民到举报点投递材料 多人被抓</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798622.md#1">【十字路口】中共叫嚷武统台湾 专家解析后果</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798554.md#1">签署中美贸易协议后首发推 川普说了啥</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11796992.md#1">【翻墙必看】中共对官员推奇葩要求 贻笑天下</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797851.md#1">故宫角楼餐厅6千多元年夜饭引争议 已全取消</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797867.md#1">2019年 遭中共迫害的社会精英人士</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798702.md#1">华盛顿加大力度 促台积电在美生产芯片</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798549.md#1">原北京师范大学研究生陶渊  陷冤狱遭迫害</a><br>
@@ -50,6 +50,7 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11798177.md#1">第一阶段贸易协议 中方承诺从美方购买稀土</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797707.md#1">中美签署协议?专家：无法改变中美对抗局面</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797969.md#1">中共禁止美公民离境 美议员提议立法制裁</a><br>
+<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797851.md#1">故宫角楼餐厅6千多元年夜饭引争议 已全取消</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797766.md#1">班农：川普以贸易战打垮中国共产党</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797758.md#1">新疆库车市5.6级地震 伊犁等地震感强烈</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/16/n11797511.md#1">武汉肺炎感染源不明 台湾提升旅游警示</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796210.md#1">美中签第一阶段贸易协议 央视罕见直播</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11781406.md#1">【独家】专访郑文杰：指认千张照 港人被送中（四）</a><br>
 <a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796125.md#1">组图：签协议后川普宴请刘鹤 称很快去中国</a><br>
-<a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796072.md#1">2020达沃斯经济论坛在即 哪些人将出席</a><br>
 <br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/zsifxm298/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792673.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/2007-4-17-zxtup-06-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792673.md#1">南昌十多名法轮功学员遭中共非法判刑</a><br>江西南昌市十多名法轮功学员在2019年 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795110.md#1">四川法轮功学员梁勤淮含冤离世</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792971.md#1">天津石化公司迫害法轮功者遭厄运</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796029.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/04/190210204338685-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796029.md#1">大补贴时代结束 大陆新能源汽车业雪上加霜</a><br>中国新能源汽车大补贴的时代已经过去 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796065.md#1">习近平让刘鹤给川普带封信 说了些什么</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795948.md#1">上海也要过“紧日子” 一般财政支出减10%</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795625.md#1">【更新】美中签署历史性第一阶段贸易协议</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795725.md#1">青海城投爆8.5亿美元债违约危机 标普降级</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795838.md#1">大陆4公司巨亏60亿 17万股民恐血本无归</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795862.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/01/1901020406272378-600x443-1-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795862.md#1">【新闻看点】蔡英文大胜 中共官媒扭曲报导惹笑</a><br>台湾大选的结果，蔡英文大胜，中共官 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795933.md#1">骆惠宁酒会上软硬兼施 香港青年逐一解读</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795797.md#1">涉中共间谍活动 三德国人遭警方突击搜查</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795612.md#1">姆钦：哪怕只有第一阶段协议 贸易战也值</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795688.md#1">爸爸是书记 10岁童散文登专业金融期刊</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795370.md#1">持枪及受贿近七千万 甘肃博士副市长受审</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794195.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/8f1b829e025bea170d28d5ec498587a6-600x400-1-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794195.md#1">西宁地陷9死10失踪 救人男孩母亲遇难</a><br>1月13日青海省西宁市地陷后，一公交?...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794062.md#1">疑武汉隐瞒疫情 港媒实地探访遭扣查</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11793955.md#1">武汉肺炎疑现人传人 夫妻先后发病</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793129.md#1">8男携刀入室行凶  屋主防卫致1死 被判8年</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792728.md#1">德国病毒专家：武汉肺炎类似SARS病毒</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792705.md#1">世卫：武汉肺炎“有限度人传人” 疫情恐扩散</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795226.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/ed2a69a1ba2de94b1ea0e3845c976c30-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795226.md#1">美中科技冷战  谢金河：美将大力封杀华为</a><br>美中贸易战暂时休兵，财信传媒董事长 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795723.md#1">新影片显示：伊朗射二枚导弹击落乌航客机</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795050.md#1">蔡英文签署反渗透法 交办三件事释疑</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794534.md#1">河北禁蒸馒头炸丸子以改善污染？网民嘲讽</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794138.md#1">每日三退声明精选（2020/01/14）</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793494.md#1">借吴花燕之病 民政部募捐百万 仅转出2万</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782930.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/01/PO_X9843-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>由香港导演陈可辛执导的《中国女排》 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794386.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1fdf4379d320c848a71215938a98b1de-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br>近日大陆各省市陆续召开两会，各地政 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792673.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/07/2007-4-17-zxtup-06-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792673.md#1">南昌十多名法轮功学员遭中共非法判刑</a><br>江西南昌市十多名法轮功学员在2019年 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795110.md#1">四川法轮功学员梁勤淮含冤离世</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792971.md#1">天津石化公司迫害法轮功者遭厄运</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793171.md#1">美参议员呼吁抵制中共监狱奴工制品</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11791676.md#1">【拍案惊奇】坠楼前场面被拍到 港男自杀7疑点</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/12/n11787878.md#1">年末岁首 中国人明真相远离中共</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796072.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6ZO-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796072.md#1">2020达沃斯经济论坛在即 哪些人将出席</a><br>来自世界各地的商界领袖和政界人士正 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796029.md#1">大补贴时代结束 大陆新能源汽车业雪上加霜</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11796065.md#1">习近平让刘鹤给川普带封信 说了些什么</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795948.md#1">上海也要过“紧日子” 一般财政支出减10%</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795625.md#1">【更新】美中签署历史性第一阶段贸易协议</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795725.md#1">青海城投爆8.5亿美元债违约危机 标普降级</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795862.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/01/1901020406272378-600x443-1-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795862.md#1">【新闻看点】蔡英文大胜 中共官媒扭曲报导惹笑</a><br>台湾大选的结果，蔡英文大胜，中共官 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795933.md#1">骆惠宁酒会上软硬兼施 香港青年逐一解读</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795797.md#1">涉中共间谍活动 三德国人遭警方突击搜查</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795612.md#1">姆钦：哪怕只有第一阶段协议 贸易战也值</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795688.md#1">爸爸是书记 10岁童散文登专业金融期刊</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795370.md#1">持枪及受贿近七千万 甘肃博士副市长受审</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794195.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/8f1b829e025bea170d28d5ec498587a6-600x400-1-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794195.md#1">西宁地陷9死10失踪 救人男孩母亲遇难</a><br>1月13日青海省西宁市地陷后，一公交?...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794062.md#1">疑武汉隐瞒疫情 港媒实地探访遭扣查</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11793955.md#1">武汉肺炎疑现人传人 夫妻先后发病</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793129.md#1">8男携刀入室行凶  屋主防卫致1死 被判8年</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792728.md#1">德国病毒专家：武汉肺炎类似SARS病毒</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11792705.md#1">世卫：武汉肺炎“有限度人传人” 疫情恐扩散</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795226.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/ed2a69a1ba2de94b1ea0e3845c976c30-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795226.md#1">美中科技冷战  谢金河：美将大力封杀华为</a><br>美中贸易战暂时休兵，财信传媒董事长 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795723.md#1">新影片显示：伊朗射二枚导弹击落乌航客机</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11795050.md#1">蔡英文签署反渗透法 交办三件事释疑</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794534.md#1">河北禁蒸馒头炸丸子以改善污染？网民嘲讽</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794138.md#1">每日三退声明精选（2020/01/14）</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/14/n11793494.md#1">借吴花燕之病 民政部募捐百万 仅转出2万</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782930.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2017/01/PO_X9843-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11782930.md#1">黄渤饰教练引争议 《中国女排》或无缘新年档</a><br>由香港导演陈可辛执导的《中国女排》 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794164.md#1">涉论文抄袭 新疆大学一博士被撤销学位</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/10/n11783185.md#1">中国C919大飞机因技术瓶颈而延后</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780326.md#1">晒与母亲合照宣传新片 徐峥不再以光头示人</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/8/n11777510.md#1">杨紫获大陆年度女演员和女明星商业价值双冠</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/8/n11777290.md#1">中共为何禁中小学使用境外教材</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779813.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/000_JX0CF-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11779813.md#1">中共犯下反人类罪 美国会报告促制裁</a><br>美国国会一份报告呼吁对侵犯人权行为 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/3/n11765947.md#1">前高管炮轰谷歌中国项目：重利轻人权</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/31/n11758321.md#1">安全担忧 美陆军紧随海军禁用TikTok</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/30/n11756102.md#1">中共外交辞令出尽丑 “耿爽模拟器”被下架</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742493.md#1">网文：大陆汽车行业艰难的两大看点</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/24/n11742305.md#1">网文：央行钱印出来了 借钱的人没了</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794386.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2020/01/1fdf4379d320c848a71215938a98b1de-150x120.jpg"></a><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/15/n11794386.md#1">各省两会临近 北京信访局清场 访民被控制</a><br>近日大陆各省市陆续召开两会，各地政 ...<br><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/9/n11780313.md#1">重庆访民险遭绑架 施救者三人被警方带走</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/5/n11769412.md#1">无锡访民联署“给黄钦书记的公开信”</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/20/1/1/n11760851.md#1">2020全面奔小康？访民：泪奔</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11747752.md#1">中科大副校长被指与中共军企合作 曾遭美拒签</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/19/12/26/n11746173.md#1">浙数千学子连续维权三天 抗议学校改名换制</a><br><br><p><a href="https://github.com/zsifxm298/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/zsifxm298/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
